working on greetings squash bugs

--- a/css/main.css
+++ b/css/main.css
@@ -211,7 +211,7 @@ input {
 
 .topsites-container {
   display: flex;
-  margin-top: 45vh;
+  margin-top: 40vh;
   grid-row: 2;
   width: 30rem;
   margin-left: 1em;
@@ -222,7 +222,7 @@ input {
 
 .tsites-container {
   display: flex;
-  margin-top: 30vh;
+  margin-top: 28vh;
   grid-row: 1;
   width: auto;
 
@@ -321,7 +321,7 @@ input {
   transform: translateZ(0);
 }
 
-.tsites-box__top {
+/* .tsites-box__top {
   position: relative;
   display: block;
   margin-right: -2em;
@@ -333,11 +333,11 @@ input {
   width: 36px;
   z-index: 100;
 
-  -webkit-animation: fadein .5s; /* Safari, Chrome and Opera > 12.1 */
+  -webkit-animation: fadein .5s;
   animation: fadein .5s;
 
   }
-
+*/
 
 .topsites-box > img {
   position: absolute;
@@ -363,8 +363,8 @@ input {
   flex-direction: row;
   display: flex;
 
-  height: 110px;
-  width: 110px;
+  height: 100px;
+  width: 100px;
   opacity: 1;
   animation-name: fadeInOpacity;
   animation-iteration-count: 1;
@@ -383,12 +383,14 @@ input {
 }
 
 .tsites-box > img {
-  width: qem;
-  height: 4em;
+  width: 3em;
+  height: 3em;
   margin: auto;
   margin-bottom: 0em;
   margin-top: 1em;
-  margin-left: 1.5em;
+  margin-left: auto;
+  margin-right: auto;
+
   border-radius: 3em;
   opacity: 1;
   animation-name: fadeInOpacity;
@@ -807,7 +809,7 @@ padding-left: 1em;
   width: auto;
   height: auto;
   font-size: 4rem;
-  top: 33vh;
+  top: 80vh;
   font-family: "Times New Roman", Times, serif;
   letter-spacing: 0.1em;
   font-weight: 900;
